Crash. Vertex painting. Picking vertex color with S crashes Blender. #97608

Closed
opened 2022-04-26 00:48:37 +02:00 by Vyacheslav Kobozev · 6 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 473.04

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-23 13:09, hash: c486da0238

Short description of error
Some more tests done.
If there is a newly created attribute with type «Face corner + Byte color»,
pressing S in sculpt mode crashes Blender

So i suppose, the issue is initial data in this type of attribute.
Because if I paint a little, bug will not appear.

upd: the same with color. So, perhaps the issue with Face corner fresh attribute.

Bug:
2022-04-26_01-40-14.mp4
More tests:
2022-04-26_01-45-51.mp4

blender_debug_output.txt
blender_system_info.txt

Steps to reproduce

  • Open new General template
  • Go to Object Data Properties > Attributes
  • Add new attribute, Face Corner domain, Byte Color type
  • Switch to sculpt mode

Press S key

Blender will crash

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 473.04 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-23 13:09, hash: `c486da0238` **Short description of error** Some more tests done. If there is a newly created attribute with type «Face corner + Byte color», pressing S in sculpt mode crashes Blender So i suppose, the issue is initial data in this type of attribute. Because if I paint a little, bug will not appear. upd: the same with color. So, perhaps the issue with Face corner fresh attribute. Bug: [2022-04-26_01-40-14.mp4](https://archive.blender.org/developer/F13027365/2022-04-26_01-40-14.mp4) More tests: [2022-04-26_01-45-51.mp4](https://archive.blender.org/developer/F13027371/2022-04-26_01-45-51.mp4) [blender_debug_output.txt](https://archive.blender.org/developer/F13025846/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F13025847/blender_system_info.txt) **Steps to reproduce** - Open new General template - Go to Object Data Properties > Attributes - Add new attribute, Face Corner domain, Byte Color type - Switch to sculpt mode # Press S key Blender will crash

Added subscriber: @Vyach

Added subscriber: @Vyach

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @iss

Added subscriber: @iss

Trace:

>	blender.exe!blender::bke::pbvh_vertex_color_get<MLoopCol>(const PBVH & pbvh, int vertex, float * r_color) Line 96	C++

 	blender.exe!<lambda_747ce9b58397f68c271b241db5f93105>::operator()<MLoopCol>(MLoopCol dummy) Line 152	C++
 	blender.exe!blender::bke::to_static_color_type<<lambda_747ce9b58397f68c271b241db5f93105>>(const CustomDataType type, const BKE_pbvh_vertex_color_get::__l2::<lambda_747ce9b58397f68c271b241db5f93105> & func) Line 55	C++
 	blender.exe!BKE_pbvh_vertex_color_get(const PBVH * pbvh, int vertex, float * r_color) Line 153	C++
 	blender.exe!SCULPT_vertex_color_get(const SculptSession * ss, int index, float * r_color) Line 164	C
 	blender.exe!sculpt_sample_color_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_e) Line 781	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1386	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2400	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2770	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3095	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3235	C
 	blender.exe!wm_event_do_region_handlers(bContext * C, wmEvent * event, ARegion * region) Line 3653	C
 	blender.exe!wm_event_do_handlers_area_regions(bContext * C, wmEvent * event, ScrArea * area) Line 3683	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3879	C
 	blender.exe!WM_main(bContext * C) Line 626	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 551	C
 	[External Code]	
Trace: ``` > blender.exe!blender::bke::pbvh_vertex_color_get<MLoopCol>(const PBVH & pbvh, int vertex, float * r_color) Line 96 C++ blender.exe!<lambda_747ce9b58397f68c271b241db5f93105>::operator()<MLoopCol>(MLoopCol dummy) Line 152 C++ blender.exe!blender::bke::to_static_color_type<<lambda_747ce9b58397f68c271b241db5f93105>>(const CustomDataType type, const BKE_pbvh_vertex_color_get::__l2::<lambda_747ce9b58397f68c271b241db5f93105> & func) Line 55 C++ blender.exe!BKE_pbvh_vertex_color_get(const PBVH * pbvh, int vertex, float * r_color) Line 153 C++ blender.exe!SCULPT_vertex_color_get(const SculptSession * ss, int index, float * r_color) Line 164 C blender.exe!sculpt_sample_color_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_e) Line 781 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1386 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2400 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2770 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3095 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3235 C blender.exe!wm_event_do_region_handlers(bContext * C, wmEvent * event, ARegion * region) Line 3653 C blender.exe!wm_event_do_handlers_area_regions(bContext * C, wmEvent * event, ScrArea * area) Line 3683 C blender.exe!wm_event_do_handlers(bContext * C) Line 3879 C blender.exe!WM_main(bContext * C) Line 626 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 551 C [External Code] ```

This issue was referenced by 7f0163118b

This issue was referenced by 7f0163118bb702afe143fe0aa55210cc10c43512
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-29 08:20:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97608
No description provided.