Fix T97608: Sculpt sample color op is missing pmap

Add missing call to BKE_sculpt_update_object_for_edit.